tests/errors/frame_exist_55/e3.src
.IPPcode21

DEFVAR GF@var
CREATEFRAME
DEFVAR TF@var2
PUSHFRAME
DEFVAR TF@v
